# image-colorizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: FindWt.cmake
css/: styles.css
js/: script.js
src/: Canvas.cpp  Canvas.h  Colorize.h  Content.cpp  Content.h  DropBox.cpp  DropBox.h  ImageColorization  ImageColorizer.cpp  ImageColorizer.h  ImagePainter.cpp  ImagePainter.h  Sidebar.cpp  Sidebar.h  Toolbar.cpp  Toolbar.h  main.cpp  style.css  testy.cpp
src/css/: style.css
